dependency updates, README update and config update